--- a/src/assets/styles/components/SidebarMenu.scss
+++ b/src/assets/styles/components/SidebarMenu.scss
@@ -12,9 +12,9 @@
   box-shadow: 3px 0px 0px 0px $primary inset !important;
 }
 
-@media only screen and (min-width: 560px) {}
+@media only screen and (min-width: 991px) {}
 
-@media only screen and (max-width: 560px) {
+@media only screen and (max-width: 991px) {
   .v-sidebar-menu {
     z-index: 1;
   }
